--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Localizzazione3"
         tools:targetApi="31">
+        
+        <activity android:name=".MainActivity"
+            android:exported="true"/>
+
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".SplashScreen"
+            android:exported="true"
+            android:theme="@style/SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
